--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,26 +1,17 @@
 body {
-    background: #000046;
-    background: -webkit-linear-gradient(to bottom, #3f94bb, #c4e0e5);
-    background: linear-gradient(to bottom, #4ca1af, #c4e0e5);
-}
-
-.container {
+    display: flex;
     min-height: 100vh;
-    height: 100%;
+    flex-direction: column;
 }
 
-.card-panel {
-    padding: 0 4rem !important;
+main {
+    flex: 1 0 auto;
 }
 
-h1 {
-    font-size: 2.5rem;
+.bold {
+    font-weight: bold !important;
 }
 
-hr {
-    border: 1px solid white;
-}
-
-.m5-tb {
-    margin: 5px auto;
+.mt-3 {
+    margin-top: 3rem;
 }
