--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,58 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
-<title>Home Page</title>
-<link rel="stylesheet" href="css/materialize.min.css">
-<link rel="stylesheet" href="css/index.css">
-<script src="js/materialize.min.js"></script>
+<title>Main Page</title>
+<link rel="stylesheet" th:href="@{/css/materialize.min.css}">
+<link rel="stylesheet" th:href="@{/css/index.css}">
+<script th:src="@{/js/materialize.min.js}"></script>
 </head>
 
-<body>
-    <div class="container valign-wrapper">
-        <div class="row">
+<body class="purple darken-3">
+    <main class="container white-text">
+        <div class="row mt-3">
             <div class="col s12">
-                <div class="card-panel deep-purple darken-4 white-text">
-                    <div class="row">
-                        <form class="col s12">
-                            <div class="row">
-                                <div class="col s12">
-                                    <h1 class="center-align ">Login</h1>
-                                    <hr>
-                                </div>
-                            </div>
-                            <div class="row m5-tb">
-                                <p class="m5-tb">
-                                    <label>
-                                        <input name="group1" type="radio" checked />
-                                        <span class="white-text">Admin</span>
-                                    </label>
-                                </p>
-                                <p class="m5-tb">
-                                    <label>
-                                        <input name="group1" type="radio" />
-                                        <span class="white-text">Seles Representetive</span>
-                                    </label>
-                                </p>
-                            </div>
-                            <div class="row m5-tb">
-                                <div class="input-field col s12">
-                                    <input id="input_text" class="white-text" type="text" data-length="30">
-                                    <label for="input_text" class="white-text">Username</label>
-                                </div>
-                            </div>
-                            <div class="row m5-tb">
-                                <div class="input-field col s12">
-                                    <input id="input_text" class="white-text" type="password" data-length="30">
-                                    <label for="input_text" class="white-text">Password</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <button type="submit" class="right waves-effect waves-light btn">Login</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+                <h1><span class="yellow-text">Dash</span>Main</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col s12">
+                <h5>Manage all activities regarding your sales <br> and ease through troublesome tasks
+                    in a matter of minutes.</h5>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12">
+                <a class="purple-text text-darken-4 white btn-flat" th:href="@{/start}">Start Now</a>
+                <a class="white-text text-darken-4 btn-flat grey darken-4"
+                    href="https://github.com/ptaushanov/BusinessProjectSAP">View on
+                    GitHub</a>
+            </div>
+        </div>
+
+    </main>
+    <footer class="page-footer purple darken-4">
+        <div class="footer-copyright">
+            <div class="container">
+                <p class="grey-text text-lighten-4">Made with <span class="green-text">Spring Boot</span> with
+                    dependencies: Spring
+                    Web, Spring Data
+                    MongoDB and Validation. Styles provided by Materialize CSS and Animate CSS</p>
+                <p class="left-align">&copy Creator: Petar Taushanov
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
