--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
 <body class="purple darken-3">
     <main class="container white-text">
-        <div class="row mt-3">
+        <div class="row mt-5">
             <div class="col s12">
                 <h1><span class="yellow-text">Dash</span>Main</h1>
             </div>
@@ -22,10 +22,10 @@
 
         <div class="row">
             <div class="col s12">
-                <a class="purple-text text-darken-4 white btn-flat" th:href="@{/start}">Start Now</a>
                 <a class="white-text text-darken-4 btn-flat grey darken-4"
-                    href="https://github.com/ptaushanov/BusinessProjectSAP">View on
+                    href="https://github.com/ptaushanov/BusinessProjectSAP" target="_blank">View on
                     GitHub</a>
+                <a class="purple-text text-darken-4 white btn-flat" th:href="@{/start}">Start Now</a>
             </div>
         </div>
 
@@ -33,10 +33,21 @@
     <footer class="page-footer purple darken-4">
         <div class="footer-copyright">
             <div class="container">
-                <p class="grey-text text-lighten-4">Made with <span class="green-text">Spring Boot</span> with
-                    dependencies: Spring
-                    Web, Spring Data
-                    MongoDB and Validation. Styles provided by Materialize CSS and Animate CSS</p>
+                <p class="grey-text text-lighten-4">Made with
+                    <a href="https://start.spring.io/" target="_blank" class=" light-green-text text-accent-3">Spring
+                        Boot</a> with
+                    dependencies:
+                    <span class="green-text text-accent-3">
+                        Spring Web, Spring Data MongoDB and Validation.
+                    </span>
+                    Styles provided by
+                    <a href="https://materializecss.com" target="_blank" class="pink-text text-lighten-2">Materialize
+                        CSS</a>
+                    and
+                    <a href="https://animate.style/" target="_blank" class="light-blue-text">
+                        Animate CSS
+                    </a>
+                </p>
                 <p class="left-align">&copy Creator: Petar Taushanov
             </div>
         </div>
