--- a/src/main/resources/templates/start/start_view.html
+++ b/src/main/resources/templates/start/start_view.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
 <title>Start Page</title>
-<link rel="stylesheet" th:href="@{/css/materialize.min.css}">
-<link rel="stylesheet" th:href=" @{/css/animate.min.css}">
+<th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/start/start_view.css}">
-<script th:src="@{/js/materialize.min.js}"></script>
 </head>
 
 <body>
@@ -14,14 +12,14 @@
     <div class="container vh-expand animate__animated animate__fadeIn valign-wrapper">
         <div class="row" id="main-row">
             <div class="col s12 m6">
-                <a href="/start/administrator">
+                <a th:href="@{/start/administrator}">
                     <div class="card-panel selection valign-wrapper">
                         <h2 class="flex center-align select-text">Administrator</h2>
                     </div>
                 </a>
             </div>
             <div class="col s12 m6">
-                <a href="/start/representative">
+                <a th:href="@{/start/representative}">
                     <div class="card-panel selection valign-wrapper">
                         <h2 class="center-align flex select-text">Sales Representative</h2>
                     </div>
