--- a/src/main/resources/templates/admins.html
+++ b/src/main/resources/templates/admins.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
 <title>Admins Panel</title>
-<link rel="stylesheet" href="css/materialize.min.css">
-<link rel="stylesheet" href="css/admins.css">
-<script src="js/materialize.min.js"></script>
-<script defer src="js/admin_bind_buttons.js"></script>
+<link rel="stylesheet" th:href="@{/css/materialize.min.css}">
+<link rel="stylesheet" th:href="@{/css/admins.css}">
+<script th:src="@{/js/materialize.min.js}"></script>
+<script defer th:src="@{/js/admin_bind_buttons.js}"></script>
 </head>
 
 <body>
