--- a/src/main/resources/templates/administrator/admin_added.html
+++ b/src/main/resources/templates/administrator/admin_added.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
 <title>Add Admin</title>
-<link rel="stylesheet" href="css/materialize.min.css">
-<link rel="stylesheet" href="css/admin_added.css">
-<script src="js/materialize.min.js"></script>
+<th:block th:insert="fragments :: simple_head"></th:block>
+<link rel="stylesheet" th:href="@{/css/administrator/admin_added.css}">
 </head>
 
 <body>
     <div class="container valign-wrapper">
         <div class="row">
             <div class="col s12">
-                <div class="card blue">
+                <div class="card purple darken-4">
                     <div class="card-content white-text">
                         <span class="card-title">New admin was added</span>
                         <p>Admin with username <span th:text="${username}"></span> was added successfully!</p>
                     </div>
                     <div class="card-action">
-                        <a class="white-text" href="#">Dashboard</a>
-                        <a class="white-text" href="/admins">Admins panel</a>
+                        <a class="white-text" th:href="@{/dashboard(role='admin',id= ${requesterId})}">Dashboard</a>
                     </div>
                 </div>
             </div>
