--- a/src/main/resources/templates/start/select_view.html
+++ b/src/main/resources/templates/start/select_view.html
@@ -16,7 +16,7 @@
                 <h1 class="center-align purple-text text-darken-4">This section is empty</h1>
             </div>
             <div class="col" th:each="entity: ${entities}">
-                <a th:href="@{/dashboard(role='admin',id= ${entity.id})}">
+                <a th:href="@{/dashboard(role= ${role},id= ${entity.id})}">
                     <div class="card-panel select-selection valign-wrapper">
                         <div class="row m-auto">
                             <div class="col s12">
