--- a/src/main/resources/static/css/administrator/add_admin.css
+++ b/src/main/resources/static/css/administrator/add_admin.css
@@ -8,7 +8,12 @@
 }
 
 .plumed {
-    padding: 2rem 4rem;
+    padding: 2rem 3rem;
+}
+
+.shrunked {
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 form {
