--- a/src/main/resources/templates/administrator/add_admin.html
+++ b/src/main/resources/templates/administrator/add_admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
 <title>Add Admin</title>
-<th:block th:insert="fragments :: simple_head"></th:block>
+<th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/administrator/add_admin.css}">
 </head>
 
@@ -10,13 +10,13 @@
         <a class="waves-effect waves-light btn-small left white-text purple darken-4"
             th:href="@{/dashboard(role= 'admin',id= ${requesterId})}">Back</a>
     </div>
-    <div class="container vh-expand valign-wrapper">
+    <div class="container animate__animated animate__fadeIn vh-expand valign-wrapper">
         <div class="row purple darken-4 plumed">
             <form th:action="@{/dashboard/new/administrator}" th:method="post" th:object="${admin}" class="col s12">
-                <div class="row">
+                <div class="row shrunked">
                     <p class="center-align flow-text white-text">New Admin</p>
                 </div>
-                <div class="row" hidden>
+                <div class="row" hidden="true">
                     <div class="input-field col s12">
                         <input class="white-text" required=true type="text" th:value=${requesterId} th:name="addedById">
                     </div>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="blue right btn waves-effect waves-light"> Add Admin </button>
+                <button type="submit" class="blue darken-2 right btn waves-effect waves-light"> Add Admin </button>
             </form>
 </body>
 
