--- a/src/main/resources/templates/administrator/invalid_requester.html
+++ b/src/main/resources/templates/administrator/invalid_requester.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <div class="container valign-wrapper">
+    <div class="container animate__animated animate__fadeIn valign-wrapper">
         <div class="row">
             <div class="col s12">
                 <div class="card purple darken-4">
