--- a/src/main/resources/templates/dashboard/main_view.html
+++ b/src/main/resources/templates/dashboard/main_view.html
@@ -12,11 +12,12 @@
     <div class="container animate__animated animate__fadeIn">
         <th:block th:insert="fragments :: entity_info"></th:block>
 
-        <th:block th:if="${rolePath == 'administrator'}" <th:block th:insert="fragments :: block_salesReps"></th:block>
+        <th:block th:if="${rolePath == 'administrator'}">
+            <th:block th:insert="fragments :: block_salesReps"></th:block>
         </th:block>
 
-        <th:block th:if="${rolePath == 'administrator'}" <th:block th:insert="fragments :: block_manageProducts">
-        </th:block>
+        <th:block th:if="${rolePath == 'administrator'}">
+            <th:block th:insert="fragments :: block_manageProducts"></th:block>
         </th:block>
     </div>
 </body>
