--- a/src/main/resources/templates/administrator/add_rep.html
+++ b/src/main/resources/templates/administrator/add_rep.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
 <title>Add Representative</title>
 <th:block th:insert="fragments :: common_head"></th:block>
-<link rel="stylesheet" th:href="@{/css/administrator/add_entity.css}">
+<link rel="stylesheet" th:href="@{/css/administrator/entity_form.css}">
 </head>
 
 <body>
@@ -19,7 +19,8 @@
                 </div>
                 <div class="row" hidden="true">
                     <div class="input-field col s12">
-                        <input class="white-text" required=true type="text" th:value=${requesterId} th:name="addedById">
+                        <input class="white-text" required=true type="text" th:value=${requesterId}
+                            th:name="managedById">
                     </div>
                 </div>
                 <div class="row">
@@ -44,8 +45,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="blue darken-2 right btn waves-effect waves-light"> Add Representative
-                </button>
+                <button type="submit" class="blue darken-2 right btn waves-effect waves-light"> Add </button>
             </form>
         </div>
     </div>
