--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <title>Main Page</title>
 <link rel="stylesheet" th:href="@{/css/materialize.min.css}">
 <link rel="stylesheet" th:href="@{/css/index.css}">
+<link rel="shortcut icon" type="icon" th:href="@{favicon.ico}" />
 <script th:src="@{/js/materialize.min.js}"></script>
 </head>
 
