--- a/src/main/resources/templates/administrator/update_product.html
+++ b/src/main/resources/templates/administrator/update_product.html
@@ -24,6 +24,11 @@
                 </div>
                 <div class="row" hidden="true">
                     <div class="input-field col s12">
+                        <input class="white-text" required=true type="text" th:value=${product.id} th:name="id">
+                    </div>
+                </div>
+                <div class="row" hidden="true">
+                    <div class="input-field col s12">
                         <input class="white-text" required=true type="text" th:value=${requesterId}
                             th:name="managedById">
                     </div>
