--- a/src/main/resources/templates/administrator/update_product.html
+++ b/src/main/resources/templates/administrator/update_product.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navigation">
         <a class="waves-effect waves-light btn-small left white-text purple darken-4"
-            th:href="@{/dashboard/manage/products(role= 'admin',requesterId = ${requesterId})}">Back</a>
+            th:href="@{/dashboard/manage/products(requesterId = ${requesterId})}">Back</a>
     </div>
     <div class="container animate__animated animate__fadeIn vh-expand valign-wrapper">
         <div class="row purple darken-4 plumed">
