Customers managed Part 2!

--- a/src/main/resources/templates/administrator/product_updated.html
+++ b/src/main/resources/templates/administrator/product_updated.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
-<title>Updated Product</th:block>
-</title>
+<title>Updated Product</title>
 <th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/administrator/common_style.css}">
 </head>
