--- a/src/main/resources/templates/administrator/update_rep.html
+++ b/src/main/resources/templates/administrator/update_rep.html
@@ -8,7 +8,7 @@
 <body>
     <div class="navigation">
         <a class="waves-effect waves-light btn-small left white-text purple darken-4"
-            th:href="@{/dashboard/manage/representatives(role= 'admin',requesterId = ${requesterId})}">Back</a>
+            th:href="@{/dashboard/manage/representatives(requesterId = ${requesterId})}">Back</a>
     </div>
     <div class="container animate__animated animate__fadeIn vh-expand valign-wrapper">
         <div class="row purple darken-4 plumed">
@@ -19,12 +19,13 @@
                 </div>
                 <div class="row" hidden="true">
                     <div class="input-field col s12">
-                        <input class="white-text" required=true type="text" th:value=${representative.id} th:name="id">
+                        <input class="white-text" required=true type="text" th:value="${representative.id}"
+                            th:name="id">
                     </div>
                 </div>
                 <div class="row" hidden="true">
                     <div class="input-field col s12">
-                        <input class="white-text" required=true type="text" th:value=${requesterId}
+                        <input class="white-text" required=true type="text" th:value="${requesterId}"
                             th:name="managedById">
                     </div>
                 </div>
