--- a/src/main/resources/templates/representative/update_customer.html
+++ b/src/main/resources/templates/representative/update_customer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
-<title>Add Admin</title>
+<title>Update Customer</title>
 <th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/representative/customer_form.css}">
 </head>
@@ -8,13 +8,18 @@
 <body>
     <div class="navigation">
         <a class="waves-effect waves-light btn-small left white-text purple darken-4"
-            th:href="@{/dashboard(role= 'salesRep',id= ${requesterId})}">Back</a>
+            th:href="@{/dashboard/manage/customers(requesterId = ${requesterId})}">Back</a>
     </div>
     <div class="container animate__animated animate__fadeIn vh-expand valign-wrapper">
         <div class="row purple darken-4 plumed">
-            <form th:action="@{/dashboard/new/customer}" th:method="post" th:object="${customer}" class="col s12">
+            <form th:action="@{/dashboard/update/customer}" th:method="post" th:object="${customer}" class="col s12">
                 <div class="row shrunked">
-                    <p class="center-align flow-text white-text">New Customer</p>
+                    <p class="center-align flow-text white-text">Edit Customer</p>
+                </div>
+                <div class="row" hidden="true">
+                    <div class="input-field col s12">
+                        <input class="white-text" required=true type="text" th:value="${customer.id}" th:name="id">
+                    </div>
                 </div>
                 <div class="row" hidden="true">
                     <div class="input-field col s12">
@@ -26,25 +31,25 @@
                     <div class="input-field col s12">
                         <label class="white-text" for="firstName">First name</label>
                         <input class="white-text" required=true minlength="2" maxlength="15" type="text" id="firstName"
-                            th:name="firstName">
+                            th:name="firstName" th:value="${customer.firstName}">
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <label class="white-text" for="lastName">Last name</label>
                         <input class="white-text" required=true minlength="2" maxlength="15" type="text" id="lastName"
-                            th:name="lastName">
+                            th:name="lastName" th:value="${customer.lastName}">
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <label class="white-text" for="username">Phone Number</label>
                         <input class="white-text" required=true minlength="3" maxlength="16" type="tel" id="phoneNumber"
-                            th:name="phoneNumber">
+                            th:name="phoneNumber" th:value="${customer.phoneNumber}">
                     </div>
                 </div>
 
-                <button type="submit" class="blue darken-2 right btn waves-effect waves-light"> Add Customer </button>
+                <button type="submit" class="blue darken-2 right btn waves-effect waves-light"> Update </button>
             </form>
         </div>
     </div>
