--- a/src/main/resources/templates/representative/promotions.html
+++ b/src/main/resources/templates/representative/promotions.html
@@ -35,10 +35,10 @@
     </div>
     <div class="container valign-wrapper animate__animated animate__fadeIn">
         <div class="row">
-            <div th:if=${promoEvents.empty} class="col s12">
+            <div th:if=${promoInfo.empty} class="col s12">
                 <h2 class="center-align purple-text text-darken-4">No active promotions</h2>
             </div>
-            <div th:unless=${promoEvents.empty} class="col s12">
+            <div th:unless=${promoInfo.empty} class="col s12">
                 <table class="highlight z-depth-3">
                     <thead class="purple darken-4 white-text gray-text text-lighten-2">
                         <tr>
@@ -51,12 +51,12 @@
                     </thead>
 
                     <tbody>
-                        <tr th:each="event: ${promoEvents}">
-                            <td th:text="${event.startDate}"></td>
-                            <td th:text="${event.endDate}"></td>
-                            <td th:text="${event.product.productName}"></td>
-                            <td th:text="${event.product.price}"></td>
-                            <td th:text="${event.promoPrice}"></td>
+                        <tr th:each="info: ${promoInfo}">
+                            <td th:text="${info.promoEvent.startDate}"></td>
+                            <td th:text="${info.promoEvent.endDate}"></td>
+                            <td th:text="${info.promoProduct.productName}"></td>
+                            <td th:text="${info.promoProduct.price}"></td>
+                            <td th:text="${info.promoEvent.promoPrice}"></td>
                         </tr>
                     </tbody>
                 </table>
