Dates and Statuses

--- a/src/main/resources/templates/representative/promotion_created.html
+++ b/src/main/resources/templates/representative/promotion_created.html
@@ -15,7 +15,7 @@
                             <span class="card-title" th:text="${errorMessage}">Error</span>
                         </th:block>
                         <th:block th:unless="${isError}">
-                            <span class="card-title">New active promotion!</span>
+                            <span class="card-title">Promotion created!</span>
                             <p>Promotion for the product was created successfully!</p>
                         </th:block>
                     </div>
