--- a/src/main/resources/templates/representative/add_customer.html
+++ b/src/main/resources/templates/representative/add_customer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th=”http://www.thymeleaf.org”> <head>
-<title>Add Admin</title>
+<title>Add Customer</title>
 <th:block th:insert="fragments :: common_head"></th:block>
 <link rel="stylesheet" th:href="@{/css/representative/common_form.css}">
 </head>
