--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -57,7 +57,7 @@
         <h5>Products</h5>
         <a th:href="@{/dashboard/promotion/products(requesterId=${entity.id})}"
             class="btn-small waves-effect waves-light pink darken-2 ">Promotions</a>
-        <a th:href="@{/dashboard/sell/product(requesterId=${entity.id})}"
+        <a th:href="@{/dashboard/new/sale(requesterId=${entity.id})}"
             class="btn-small waves-effect waves-light  deep-orange">Sell</a>
     </div>
 </div>
